<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="80"
        android:icon="@drawable/art_snow"
        app:showAsAction="always" />


    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="80"
        android:icon="@drawable/art_clear"
        app:showAsAction="always"
        />


    <item android:id="@+id/action_another"
        android:title="@string/action_another"
        android:orderInCategory="80"
        android:icon="@drawable/art_rain"
        app:showAsAction="always"
        />

</menu>
